--- a/coreapp/templates/baseb.html
+++ b/coreapp/templates/baseb.html
@@ -95,7 +95,7 @@
     <li class="nav-item"><a href="{% url 'coreapp:application' %}" class="nav-link px-2 text-muted">Application</a></li>
     <li class="nav-item"><a href="{% url 'coreapp:about' %}" class="nav-link px-2 text-muted">About</a></li>
   </ul>
-  <p class="text-center text-muted">© 2022 Created by <a href="#">Wallace Pannace</a></p>
+  <p class="text-center text-muted">© 2022 Created by <a href="https://portfolio-wallacepp.herokuapp.com/" target="_blank">Wallace Pannace</a></p>
 </footer>
 </body>
 </html>
