--- a/coreapp/templates/coreapp/about.html
+++ b/coreapp/templates/coreapp/about.html
@@ -9,7 +9,7 @@
         <p>I'm currently free for opportunities in the freelance field or internship opportunities while I finish my graduation.</p>
     </div>
     <div class="text-center">
-        <a href="#"><img src="{% static  'perfil.png' %}" alt="" class="transform1 m-4" height="200" width="200"></a>
+        <a href="https://www.linkedin.com/in/wallace-pannace-48ba72249/" target="_blank"><img src="{% static  'perfil.png' %}" alt="" class="transform1 m-4" height="200" width="200"></a>
     </div>
     <h1 class="text-center">About the Application</h1>
     <div>
@@ -27,9 +27,9 @@
     
     <div class="text-center pb-3">
         <p>If you want to see/clone the repository of the project on github, acess the link below:</p>
-        <a href="#"><img src="{% static  'gitlogo.png' %}" height="50" width="50" alt=""> Project Repository</a>
+        <a href="https://github.com/Wallace-p-p/Motifs-identification-on-light-curves" target="_blank"><img src="{% static  'gitlogo.png' %}" height="50" width="50" alt=""> Project Repository</a>
         <p>If you are interested to see/clone this site repository, it is part of my portifolio project, that can be accessed by the link below:</p>
-        <a href="#"><img src="{% static  'gitlogo.png' %}" height="50" width="50" alt="">Cluster-Morph django project Repository</a>
+        <a href="https://github.com/Wallace-p-p/Cluster-Morph" target="_blank"><img src="{% static  'gitlogo.png' %}" height="50" width="50" alt="">Cluster-Morph django project Repository</a>
         
     </div>
 </div>
