--- a/coreapp/templates/coreapp/home.html
+++ b/coreapp/templates/coreapp/home.html
@@ -3,7 +3,7 @@
 {% block body %}
 <div class="container">
     <h1 class="text-center p-3">Cluster Morph</h1>
-    <div class="pb-5">This application seeks to cluster curves (mostly time series) based on morphological characteristics of each curve, the code used is an adaptation of the code made in the initiation project "Computer Program for the Identification of Celestial Objects through the Analysis of Light Curves" made at the Federal University of Latin-American Integration (UNILA) in 2017 ( <a href="#"><img src="{% static  'gitlogo.png' %}"  href="#" width="15" height="15"> github repository</a>).</div>
+    <div class="pb-5">This application seeks to cluster curves (mostly time series) based on morphological characteristics of each curve, the code used is an adaptation of the code made in the initiation project "Computer Program for the Identification of Celestial Objects through the Analysis of Light Curves" made at the Federal University of Latin-American Integration (UNILA) in 2017 ( <a href="https://github.com/Wallace-p-p/Motifs-identification-on-light-curves" target="_blank"><img src="{% static  'gitlogo.png' %}"  href="#" width="15" height="15"> github repository</a>).</div>
 </div>
 
 <img src="{% static  'background.png' %}" alt="" class="img-fluid m-3" height="230" width="360" style="float: left;">
